cloud-service/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cloud-service-ci
  labels:
    argocd.argoproj.io/managed-by: openshift-gitops
