cloud-service/00-deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  annotations:
    alpha.image.policy.openshift.io/resolve-names: '*'
    app.openshift.io/route-disabled: 'false'
    app.openshift.io/vcs-ref: ''
    app.openshift.io/vcs-uri: 'https://github.com/ludydoo/poc-cloud-service'
    image.openshift.io/triggers: '[{"from":{"kind":"ImageStreamTag","name":"cloud-service:latest","namespace":"cloud-service-ci"},"fieldPath":"spec.template.spec.containers[?(@.name==\"poc-cloud-service\")].image"}]'
  name: poc-cloud-service
  namespace: cloud-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: poc-cloud-service
  template:
    metadata:
      labels:
        app: poc-cloud-service
        deployment: poc-cloud-service
    spec:
      containers:
        - name: poc-cloud-service
          image: 'image-registry.openshift-image-registry.svc:5000/cloud-service/poc-cloud-service:latest'
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: Always
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
