cloud-service/07-db-deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: db
  namespace: cloud-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: db
  template:
    metadata:
      labels:
        app: db
        deployment: db
    spec:
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        runAsNonRoot: true
      containers:
        - name: db
          image: postgres:16
          securityContext:
            privileged: false
            allowPrivilegeEscalation: false
            capabilities:
              drop: [ "ALL" ]
          ports:
            - containerPort: 5432
              protocol: TCP
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: data
              subPath: data
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: db-data
