cloud-service/02-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    app.openshift.io/vcs-ref: ""
    app.openshift.io/vcs-uri: https://github.com/ludydoo/poc-cloud-service
  name: poc-cloud-service
  namespace: cloud-service
spec:
  ports:
    - name: 8080-tcp
      port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: poc-cloud-service
    deployment: poc-cloud-service
