cloud-service/08-db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: db
  namespace: cloud-service
spec:
  ports:
    - port: 5432
      protocol: TCP
      targetPort: 5432
  selector:
    app: db
    deployment: db
