cloud-service/03-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: poc-cloud-service
  namespace: cloud-service
spec:
  port:
    targetPort: 8080-tcp
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: poc-cloud-service
    weight: 100
  wildcardPolicy: None
